# PMLDL-MLOps

./: .dockerignore  .gitignore  README.md  api.Dockerfile  app.Dockerfile  compose.yaml  pyproject.toml
.streamlit/: config.toml
models/: effnet-b2_epoch_10.pkl  resnet18.pkl
src/datasets/: dataloaders.py  datasets.py  labels.py  transforms.py
src/deployments/api/: __main__.py
src/deployments/app/: __main__.py
src/models/: effnet-b2.py  resnet18.py
src/notebooks/: eda.ipynb  effnet-b2-take-2.ipynb  effnet-b2.ipynb  effnet-l2-take2.ipynb  effnet-l2.ipynb
src/src/: inference.py  load_model.py  train_loop.py
src/util/: args.py  ml.py  save_model.py
