[tool.poetry]
name = "deployment"
version = "0.1.0"
description = ""
authors = ["Alexey Tkachenko <a.tkachenko@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
fastapi = "^0.115.0"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
torchvision = "^0.19.1"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
